--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,6 @@ steps:
   - name: node
     entrypoint: npm
     args: ["run", "build"]
-  - name: "eu.gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "./build/app.yaml"]
+  - name: node
+    entrypoint: npm
+    args: ["run", "start"]
